webpack-dev-serverの設定見直し→リロード＆再コンパイルできるようにした

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div class="content"></div>
-  <script src="./dist/bundle.js"></script>
+  <script src="./bundle.js"></script>
 </body>
 
 </html>
