--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Hello React & TypeSctipt</title>
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 </head>
 
 <body>
